<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="Inicio"
        android:textColor="#607D8B"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#40567C"
        android:drawableLeft="@drawable/baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="Correo electronico"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/userEmail"
        android:background="#40567C"
        android:hint="Contraseña"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/baseline_security_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#607D8B"
        android:text="Iniciar sesión" />

    <ImageView
        android:id="@+id/googleSignInButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/password"
        android:layout_alignRight="@id/loginbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="-80dp"
        android:contentDescription="Iniciar sesión con Google"
        android:padding="10dp"
        android:src="@drawable/googleicon" />


    <TextView
        android:id="@+id/goRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/googleSignInButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="221dp"
        android:text="¿No te has registrado todavia?"
        android:textColor="#607D8B"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/googleSignInButton"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:text="¿Olvidaste tu contraseña?"
        android:textColor="#607D8B"
        android:textStyle="italic" />




</RelativeLayout>