<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menuProfile"
        android:icon="@drawable/img_menu_profile"
        android:title="Perfil"
        android:textColor="#607D8B" />

    <item android:id="@+id/menuParking"
        android:icon="@drawable/baseline_local_parking_24"
        android:title="Ver parking"
        android:textColor="#607D8B" />

    <item android:id="@+id/menuReserva"
        android:icon="@drawable/baseline_book_24"
        android:title="Realizar reserva"
        android:textColor="#607D8B" />

    <item android:id="@+id/menuAdmin"
        android:icon="@drawable/baseline_admin_panel_settings_24"
        android:title="Parking Settings"
        android:textColor="#607D8B" />

    <item android:id="@+id/Salir"
        android:icon="@drawable/baseline_exit_to_app_24"
        android:title="Salir"
        android:textColor="#607D8B" />

</menu>