...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavFragments.AdminFragment">


    <TextView
        android:id="@+id/gestionlbl"
        android:layout_width="170dp"
        android:layout_height="34dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:text="Gestión de plazas"
        android:textColor="#607D8B"
...
