<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:id="@+id/BookingFragment"
    tools:context=".NavFragments.BookingFragment">

    <TextView
        android:id="@+id/fechaTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="Fecha actual"
        android:textColor="#607D8B"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/btnAnterior"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:contentDescription="Day_before_btton"
        android:src="@drawable/baseline_keyboard_arrow_left_24" />

    <ImageView
        android:id="@+id/btnSiguiente"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/baseline_keyboard_arrow_right_24"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="Next_day_btton" />


    <LinearLayout
        android:id="@+id/LinearLayoutImagenCoche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fechaTextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imgCoche"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="Vector Asset"
            android:src="@drawable/baseline_directions_car_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutRealizarReservaCoche"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_below="@+id/fechaTextView"
        android:layout_marginStart="60dp"
        android:layout_marginTop="70dp"
        android:layout_toEndOf="@+id/LinearLayoutImagenCoche"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imgRealizarReservaCoche"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:contentDescription="Vector Asset"
            android:src="@drawable/baseline_add_24" />

        <TextView
            android:id="@+id/txtRealizarReservaCoche"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:padding="10dp"
            android:text="Reservar plaza para coche"
            android:textColor="@android:color/white"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutImagenElectrico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayoutImagenCoche"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imgEle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="Vector Asset"
            android:src="@drawable/baseline_electric_car_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutRealizarReservaElec"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_below="@+id/LinearLayoutRealizarReservaCoche"
        android:layout_marginStart="60dp"
        android:layout_marginTop="85dp"
        android:layout_toEndOf="@+id/LinearLayoutImagenElectrico"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imgRealizarReservaElec"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:contentDescription="Vector Asset"
            android:src="@drawable/baseline_add_24" />

        <TextView
            android:id="@+id/txtRealizarReservaElec"
            android:layout_width="161dp"
            android:layout_height="34dp"
            android:padding="10dp"
            android:text="Reservar plaza para electrico"
            android:textColor="@android:color/white"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutImagenMinusv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayoutImagenElectrico"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imgMinusv"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="Vector Asset"
            android:src="@drawable/baseline_accessible_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutRealizarReservaMinusv"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_below="@+id/LinearLayoutRealizarReservaElec"
        android:layout_marginStart="60dp"
        android:layout_marginTop="90dp"
        android:layout_toEndOf="@+id/LinearLayoutImagenMinusv"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imgRealizarReservaMinusv"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:contentDescription="Vector Asset"
            android:src="@drawable/baseline_add_24" />

        <TextView
            android:id="@+id/txtRealizarReservaMinusv"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:padding="10dp"
            android:text="Reservar plaza para minusvalido"
            android:textColor="@android:color/white"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutImagenMoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayoutImagenMinusv"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imgMotoP"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="Vector Asset"
            android:src="@drawable/baseline_sports_motorsports_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutRealizarReservaMoto"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_below="@+id/LinearLayoutRealizarReservaMinusv"
        android:layout_marginStart="60dp"
        android:layout_marginTop="90dp"
        android:layout_toEndOf="@+id/LinearLayoutImagenMoto"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imgRealizarReservaMoto"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:contentDescription="Vector Asset"
            android:src="@drawable/baseline_add_24" />

        <TextView
            android:id="@+id/txtRealizarReservaMoto"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:padding="10dp"
            android:text="Reservar plaza para moto"
            android:textColor="@android:color/white"
            android:textSize="10sp" />
    </LinearLayout>


</RelativeLayout>